studio-ghibli/styles.css
h1,
h2,
h3,
p,
ul,
li {
  margin: 0;
  padding: 0;
}

nav ul,
nav ol {
  list-style-type: none;
}

/********** End Reset ***********/

body {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 300;
  color: #333;
  background-color: #efefef;
}

h1,
h2,
h3 {
  font-family: 'Flavors', cursive;
  font-weight: 400;
  margin-bottom: 0.5em;
}

h1 {
  position: absolute;
  left: -10000px;
}

h2 {
  font-size: 2em;
  color: #0c3967;
}

p {
  margin-bottom: 1em;
  line-height: 1.4em;
}

header {
  text-align: center;
}

header img {
  max-width: 75%;
}

nav {
  padding: 20px;
  text-align: center;
}

main {
  padding: 20px;
}

article {
  background-color: #fff;
  border-radius: 10px;
  padding: 20px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
  margin-bottom: 20px;
}

strong {
  font-weight: 500;
}

#loader {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  background: rgb(10 50 95 / 75%);
}

#loader img {
  margin: 0 auto;
  position: relative;
  padding-top: 20vh;
  display: block;
}

#mainnav ul {
  border-top: 2px solid #b21f1f;
}

#mainnav ul li a {
  display: block;
  text-decoration: none;
  background-color: darkred;
  color: white;
  text-transform: uppercase;
  font-weight: 500;
  border-bottom: 2px solid #b21f1f;
  padding: 10px;
}

#mainnav ul li a:hover {
  opacity: 0.5;
}

.sub-details {
  padding: 0 30px;
}

.sub-details span {
  color: #b21f1f;
}

@media only screen and (min-width: 600px) {
  main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 20px;
  }

  article {
    margin-bottom: 0;
  }

  #mainnav ul {
    display: flex;
    border-top: none;
  }
  #mainnav ul li {
    flex: 1;
  }
  #mainnav ul li a {
    border-bottom: none;
    border-right: 2px solid #b21f1f;
  }
  #mainnav ul li:last-of-type a {
    border-right: none;
  }
}

@media only screen and (min-width: 900px) {
  main {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 20px;
  }
}

